--- a/templates/resultado.html
+++ b/templates/resultado.html
@@ -69,10 +69,11 @@
         <p>Silt (%): {{ silt }}</p>
         <p>Density (g/cm³): {{ density }}</p>
         <p>Org_Mat (%): {{ org_mat }}</p>
-        <p>Porosity (%): {{ porosity }}</p>
+        <p>Porosity (cm³ cm-³): {{ porosity }}</p>
         <div class="button-container">
             <button class="back-button" onclick="window.location.href='/';">Voltar ao formulário</button>
         </div>
+        <h2>Textura: {{textura}}</h2>
     </div>
 
     <div class="content">
